@startuml
'https://plantuml.com/class-diagram

entity Player
entity Map

Player *-- PositionComponent
Player *-- TextureComponent

Map *-- PositionComponent
Map *-- TilemapComponent

class TextureComponent {
Texture texture
}

class TilemapComponent {
OrthogonalTiledMapRenderer mapRenderer
TiledMap map
}

class PositionComponent {
float x
float y
int z
}


@enduml